Fix alignment, title and send button

--- a/client/src/components/PendingNominees/style.css
+++ b/client/src/components/PendingNominees/style.css
@@ -8,7 +8,6 @@
 #pending-count {
   color: #37323e;
   display: inline-block;
-  margin-top: 0.4rem;
   width: 40px;
   height: 40px;
   line-height: 35px;
